[gd_scene load_steps=10 format=2]

[ext_resource path="res://Shared/Actions/Shots/HitscanShot.gd" type="Script" id=1]

[sub_resource type="SpatialMaterial" id=8]
resource_local_to_scene = true
albedo_color = Color( 1, 0, 0, 1 )
emission_enabled = true
emission = Color( 1, 1, 1, 1 )
emission_energy = 200.0
emission_operator = 0
emission_on_uv2 = false

[sub_resource type="CylinderMesh" id=1]
top_radius = 7.0
bottom_radius = 7.0
radial_segments = 8

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 1, 0, 0, 1 )
emission_enabled = true
emission = Color( 1, 0, 0, 1 )
emission_energy = 500.0
emission_operator = 0
emission_on_uv2 = false

[sub_resource type="SpatialMaterial" id=3]
emission_enabled = true
emission = Color( 1, 0, 0, 1 )
emission_energy = 500.0
emission_operator = 0
emission_on_uv2 = false

[sub_resource type="Curve" id=4]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), -2.20433, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=9]
curve = SubResource( 4 )

[sub_resource type="ParticlesMaterial" id=6]
spread = 15.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 30.0
scale_curve = SubResource( 9 )

[sub_resource type="SphereMesh" id=7]
radius = 0.2
height = 0.4
radial_segments = 10
rings = 5

[node name="HitscanShot" type="RayCast"]
enabled = true
cast_to = Vector3( 0, 0, -1 )
script = ExtResource( 1 )

[node name="Visualisation" type="MeshInstance" parent="."]
transform = Transform( 0.025, 0, 0, 0, -4.37114e-08, -0.025, 0, 1, -1.09278e-09, 0, 0, -2.5 )
layers = 512
material_override = SubResource( 8 )
cast_shadow = 0
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="HitPoint" type="Spatial" parent="."]

[node name="BackParticles" type="Particles" parent="HitPoint"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0 )
material_override = SubResource( 3 )
cast_shadow = 0
emitting = false
amount = 5
lifetime = 0.2
one_shot = true
explosiveness = 0.7
randomness = 1.0
process_material = SubResource( 6 )
draw_pass_1 = SubResource( 7 )

[node name="FrontParticles" type="Particles" parent="HitPoint"]
transform = Transform( 1.31134e-07, 0, -1, 0, 1, 0, 1, 0, 1.31134e-07, 0, 0, 0 )
material_override = SubResource( 3 )
cast_shadow = 0
emitting = false
amount = 5
lifetime = 0.2
one_shot = true
explosiveness = 0.7
randomness = 1.0
process_material = SubResource( 6 )
draw_pass_1 = SubResource( 7 )
